@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: text.test,v 1.49 2007/12/13 15:27:54 dgp Exp $
+# RCS: @(#) $Id: text.test,v 1.49.2.1 2008/11/12 22:17:02 patthoyts Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -3624,6 +3624,48 @@ test text-33.3 {widget dump -command destroys widget} {
 
 deleteWindows
 option clear
+
+test text-36.1 "bug #1777362: event handling with hyphenated windows" -setup {
+    proc bgerror {m} {set ::my_error $m}
+    set ::my_error {}
+    pack [set w [text .t-1]]
+} -body {
+    tkwait visibility $w
+    event generate $w <1>
+    event generate $w <1>
+    update
+    set ::my_error
+} -cleanup {
+    destroy .t-1
+} -result {}
+
+test text-36.2 "bug #1777362: event handling with hyphenated windows" -setup {
+    proc bgerror {m} {set ::my_error $m}
+    set ::my_error {}
+    pack [set w [text .t+1]]
+} -body {
+    tkwait visibility $w
+    event generate $w <1>
+    event generate $w <1>
+    update
+    set ::my_error
+} -cleanup {
+    destroy $w
+} -result {}
+
+test text-36.3 "bug #1777362: event handling with hyphenated windows" -setup {
+    proc bgerror {m} {set ::my_error $m}
+    set ::my_error {}
+    pack [set w [text .t*1]]
+} -body {
+    tkwait visibility $w
+    event generate $w <1>
+    event generate $w <1>
+    update
+    set ::my_error
+} -cleanup {
+    destroy $w
+} -result {}
 
 # cleanup
 cleanupTests
